--- a/public/pages/add_number.html
+++ b/public/pages/add_number.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>for call phobia - 전화번호 추가</title>
-    <link rel="stylesheet" href="add_number.css">
+    <link rel="stylesheet" href="../css/add_number.css">
 </head>
 <body>
     <div class="container">
