--- a/public/pages/call_live.html
+++ b/public/pages/call_live.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>for call phobia voice</title>
-    <link rel="stylesheet" href="call_live.css">
+    <link rel="stylesheet" href="../css/call_live.css">
 </head>
 <body>
     <div class="call-container">
