--- a/public/pages/incoming_call.html
+++ b/public/pages/incoming_call.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>for call phobia - 수신 통화</title>
-    <link rel="stylesheet" href="incoming_call.css">
+    <link rel="stylesheet" href="../css/incoming_call.css">
 </head>
 <body>
     <div class="container">
