--- a/public/pages/finished_call.html
+++ b/public/pages/finished_call.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>for call phobia - 통화 종료</title>
-    <link rel="stylesheet" href="finished_call.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
