회원가입 페이지에서 call 화면 이동 처리

--- a/public/pages/join_membership.html
+++ b/public/pages/join_membership.html
@@ -31,6 +31,6 @@
             <p><a href="terms_of_service_and_privacy_policy.html">약관 | 개인정보 처리 방침</a></p>
         </div>
     </div>
-    
+    <script src="../javascript/join_membership.js"></script>
 </body>
 </html>
