call_history에서 call_detail로 이동

--- a/public/pages/call_history.html
+++ b/public/pages/call_history.html
@@ -274,7 +274,7 @@
                         </div>
 
                         <!-- 아이템 2 -->
-                        <div class="ch-row">
+                        <div class="ch-row" id="reservation-done">
                             <div class="ch-item">
                                 <div
                                     class="ch-ic ch-ic--outgoing"
@@ -442,5 +442,6 @@
                 </section>
             </main>
         </div>
+        <script src="../javascript/call_history.js"></script>
     </body>
 </html>
