--- a/public/pages/call_live.html
+++ b/public/pages/call_live.html
@@ -15,12 +15,10 @@
                 <span class="second-title">for call phobia</span>
             </div>
             <button class="call-audio"><span class="audio-icon">🔊</span>오디오 시작</button>
-<<<<<<< HEAD
             <button class="end-call" id="endCallBtn">통화 종료</button>
 
-=======
-            <button class="end-call">통화 종료</button>
->>>>>>> 2c649989659e3f74cc44bb2564546ff8ce0b15e1
+            <!-- <button class="end-call">통화 종료</button> -->
+
         </div>
                 <!-- 실시간 통화 및 채팅창 -->
         <div class="chat-window" id="chat-window">
