전화번호부 페이지 라우팅 및 번호 추가 화면 연결

--- a/public/pages/add_number.html
+++ b/public/pages/add_number.html
@@ -24,5 +24,6 @@
             <button class="finished">완료</button>
         </div>
     </div>
+    <script src="../javascript/add_number.js"></script>
 </body>
 </html>
