--- a/public/pages/phone_number_list.html
+++ b/public/pages/phone_number_list.html
@@ -681,5 +681,6 @@
                 </section>
             </main>
         </div>
+        <script src="../javascript/phone_number_list.js"></script>
     </body>
 </html>
