대화 로그 수정

--- a/public/pages/call_live.html
+++ b/public/pages/call_live.html
@@ -27,9 +27,9 @@
 
         <div class="ai-suggestions">
         <div class="AI-recommended-answer fixed">다시 한 번 말씀해 주시겠어요?</div>
-        <div class="AI-recommended-answer dynamic">잠시만 기다려 주세요.</div>
-        <div class="AI-recommended-answer dynamic">다음에 다시 연락드리겠습니다.</div>
-        <div class="AI-recommended-answer dynamic">네, 그렇게 진행해 주세요.</div>
+
+        <!-- ⭐ 여기를 새로 추가 ⭐ -->
+        <div id="dynamic-suggestions" class="dynamic-container"></div>
         </div>
 
         <div class="chat-input">
