feat: 통화 종료 화면 개선 및 요약 표시 안정화
- 통화 종료 시 finished_call 화면으로 이동하도록 통합 처리
- 종료 화면에 통화 요약 추가
- call.summary 수신 후 redirect하도록 해 요약 누락 방지
- 핸드폰 종료/버튼 종료 모두 정상 동작 확인

--- a/public/pages/finished_call.html
+++ b/public/pages/finished_call.html
@@ -11,33 +11,85 @@
         <div class="header-box">
             <h1><a href="call.html">for call phobia</a></h1>
         </div>
+
         <div class="call-finished">
             <h2 class="second-title">통화가 종료되었습니다.</h2>
-            <p class="call-number" id="callNumber"><svg width="40" height="40" viewBox="0 0 71 71" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M29.3543 41.0822C26.4541 38.2163 24.1738 34.809 22.5133 30.8606C20.8528 26.9122 20.0825 22.6897 20.2025 18.1932C20.199 17.6068 20.3916 17.117 20.7802 16.7237C21.1688 16.3305 21.6563 16.1321 22.2427 16.1286L28.9133 16.1624C29.4508 16.1592 29.9099 16.3214 30.2906 16.649C30.6713 16.9766 30.8998 17.3967 30.9761 17.9094L32.0466 25.3798C32.0975 25.7215 32.075 26.0393 31.979 26.3331C31.883 26.6269 31.7136 26.8966 31.4707 27.1424L27.3174 31.3452C27.9599 32.5631 28.6877 33.7438 29.5008 34.8874C30.3139 36.031 31.2366 37.1128 32.2689 38.1329C33.3011 39.153 34.3938 40.0628 35.547 40.8623C36.7001 41.6617 37.8894 42.3755 39.1148 43.0035L43.268 38.8007C43.5109 38.5549 43.7787 38.3823 44.0713 38.2828C44.3639 38.1833 44.6814 38.157 45.0237 38.2039L52.5063 39.1857C53.0198 39.256 53.4426 39.4795 53.7747 39.8562C54.1068 40.233 54.2744 40.6901 54.2776 41.2276L54.3905 47.8974C54.394 48.4838 54.2014 48.9736 53.8128 49.3669C53.4242 49.7601 52.9367 49.9585 52.3503 49.9619C47.8801 50.1595 43.6549 49.4454 39.6748 47.8197C35.6946 46.1941 32.2545 43.9482 29.3543 41.0822Z" fill="#1D1B20"/>
-            </svg>
-            +82 10-1234-1234</p>
-            <button class="call-again"><svg width="20" height="20" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M26.2495 10V3.75M26.2495 3.75H19.9995M26.2495 3.75L18.7495 11.25M12.7832 17.3289C11.2813 15.8269 10.0953 14.1285 9.22535 12.3165C9.15051 12.1607 9.1131 12.0827 9.08435 11.9841C8.9822 11.6337 9.05557 11.2034 9.26808 10.9066C9.32788 10.8231 9.39933 10.7516 9.54222 10.6087C9.97922 10.1717 10.1977 9.95321 10.3406 9.73349C10.8793 8.90487 10.8793 7.83665 10.3406 7.00804C10.1977 6.78831 9.97922 6.56981 9.54222 6.1328L9.29863 5.88921C8.63433 5.22491 8.30217 4.89276 7.94545 4.71234C7.236 4.3535 6.39817 4.3535 5.68872 4.71234C5.332 4.89276 4.99983 5.22491 4.33553 5.88921L4.1385 6.08626C3.47646 6.74829 3.14545 7.0793 2.89263 7.52935C2.61211 8.02872 2.41041 8.80434 2.41212 9.37712C2.41365 9.8933 2.51378 10.2461 2.71405 10.9516C3.79026 14.7434 5.82085 18.3214 8.80582 21.3063C11.7908 24.2913 15.3687 26.3219 19.1605 27.3981C19.866 27.5984 20.2189 27.6985 20.735 27.7C21.3077 27.7017 22.0834 27.5 22.5827 27.2195C23.0329 26.9666 23.3639 26.6356 24.0259 25.9736L24.2229 25.7766C24.8872 25.1122 25.2194 24.7801 25.3997 24.4234C25.7586 23.714 25.7586 22.8761 25.3997 22.1666C25.2194 21.81 24.8872 21.4778 24.2229 20.8135L23.9794 20.5699C23.5424 20.1329 23.3239 19.9144 23.1041 19.7715C22.2755 19.2327 21.2072 19.2327 20.3786 19.7715C20.1589 19.9144 19.9404 20.1329 19.5034 20.5699C19.3605 20.7128 19.2891 20.7842 19.2055 20.844C18.9087 21.0566 18.4785 21.13 18.128 21.0278C18.0294 20.999 17.9515 20.9616 17.7956 20.8868C15.9836 20.0168 14.2852 18.8308 12.7832 17.3289Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-            다시 걸기</button>
-            <button class="finish"><svg width="25" height="25" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M15.0003 25.0002V15.0001M15.0003 15.0001H25.0003M15.0003 15.0001L25.0003 24.9998M13 35H27C29.8003 35 31.2003 35 32.27 34.455C33.2108 33.9757 33.9757 33.2108 34.455 32.27C35 31.2003 35 29.8003 35 27V13C35 10.1997 35 8.7996 34.455 7.73005C33.9757 6.78923 33.2108 6.02433 32.27 5.54497C31.2003 5 29.8003 5 27 5H13C10.1997 5 8.7996 5 7.73005 5.54497C6.78923 6.02433 6.02433 6.78923 5.54497 7.73005C5 8.7996 5 10.1997 5 13V27C5 29.8003 5 31.2003 5.54497 32.27C6.02433 33.2108 6.78923 33.9757 7.73005 34.455C8.7996 35 10.1997 35 13 35Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-            종료</button>
+
+            <!-- 전화번호 -->
+            <p class="call-number">
+                <svg width="40" height="40" viewBox="0 0 71 71" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M29.3543 41.0822C26.4541 38.2163 24.1738 34.809 22.5133 30.8606C20.8528 26.9122 20.0825 22.6897 20.2025 18.1932C20.199 17.6068 20.3916 17.117 20.7802 16.7237C21.1688 16.3305 21.6563 16.1321 22.2427 16.1286L28.9133 16.1624C29.4508 16.1592 29.9099 16.3214 30.2906 16.649C30.6713 16.9766 30.8998 17.3967 30.9761 17.9094L32.0466 25.3798C32.0975 25.7215 32.075 26.0393 31.979 26.3331C31.883 26.6269 31.7136 26.8966 31.4707 27.1424L27.3174 31.3452C27.9599 32.5631 28.6877 33.7438 29.5008 34.8874C30.3139 36.031 31.2366 37.1128 32.2689 38.1329C33.3011 39.153 34.3938 40.0628 35.547 40.8623C36.7001 41.6617 37.8894 42.3755 39.1148 43.0035L43.268 38.8007C43.5109 38.5549 43.7787 38.3823 44.0713 38.2828C44.3639 38.1833 44.6814 38.157 45.0237 38.2039L52.5063 39.1857C53.0198 39.256 53.4426 39.4795 53.7747 39.8562C54.1068 40.233 54.2744 40.6901 54.2776 41.2276L54.3905 47.8974C54.394 48.4838 54.2014 48.9736 53.8128 49.3669C53.4242 49.7601 52.9367 49.9585 52.3503 49.9619C47.8801 50.1595 43.6549 49.4454 39.6748 47.8197C35.6946 46.1941 32.2545 43.9482 29.3543 41.0822Z" fill="#1D1B20"/>
+                </svg>
+                <span id="callNumberText">+82 10-1234-1234</span>
+            </p>
+
+            <!-- 통화 요약 박스 -->
+            <div class="call-summary" id="callSummaryBox">
+                <div class="call-summary-title">통화 내용 요약</div>
+                <p id="callSummaryText">통화 요약을 불러오는 중입니다...</p>
+            </div>
+
+            <!-- 버튼 가로 정렬 -->
+            <div class="button-row">
+                <button class="call-again">
+                    <svg width="20" height="20" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M26.2495 10V3.75M26.2495 3.75H19.9995M26.2495 3.75L18.7495 11.25M12.7832 17.3289C11.2813 15.8269 10.0953 14.1285 9.22535 12.3165C9.15051 12.1607 9.1131 12.0827 9.08435 11.9841C8.9822 11.6337 9.05557 11.2034 9.26808 10.9066C9.32788 10.8231 9.39933 10.7516 9.54222 10.6087C9.97922 10.1717 10.1977 9.95321 10.3406 9.73349C10.8793 8.90487 10.8793 7.83665 10.3406 7.00804C10.1977 6.78831 9.97922 6.56981 9.54222 6.1328L9.29863 5.88921C8.63433 5.22491 8.30217 4.89276 7.94545 4.71234C7.236 4.3535 6.39817 4.3535 5.68872 4.71234C5.332 4.89276 4.99983 5.22491 4.33553 5.88921L4.1385 6.08626C3.47646 6.74829 3.14545 7.0793 2.89263 7.52935C2.61211 8.02872 2.41041 8.80434 2.41212 9.37712C2.41365 9.8933 2.51378 10.2461 2.71405 10.9516C3.79026 14.7434 5.82085 18.3214 8.80582 21.3063C11.7908 24.2913 15.3687 26.3219 19.1605 27.3981C19.866 27.5984 20.2189 27.6985 20.735 27.7C21.3077 27.7017 22.0834 27.5 22.5827 27.2195C23.0329 26.9666 23.3639 26.6356 24.0259 25.9736L24.2229 25.7766C24.8872 25.1122 25.2194 24.7801 25.3997 24.4234C25.7586 23.714 25.7586 22.8761 25.3997 22.1666C25.2194 21.81 24.8872 21.4778 24.2229 20.8135L23.9794 20.5699C23.5424 20.1329 23.3239 19.9144 23.1041 19.7715C22.2755 19.2327 21.2072 19.2327 20.3786 19.7715C20.1589 19.9144 19.9404 20.1329 19.5034 20.5699C19.3605 20.7128 19.2891 20.7842 19.2055 20.844C18.9087 21.0566 18.4785 21.13 18.128 21.0278C18.0294 20.999 17.9515 20.9616 17.7956 20.8868C15.9836 20.0168 14.2852 18.8308 12.7832 17.3289Z" 
+                        stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    다시 걸기
+                </button>
+
+                <button class="finish">
+                    <svg width="25" height="25" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.0003 25.0002V15.0001M15.0003 15.0001H25.0003M15.0003 15.0001L25.0003 24.9998M13 35H27C29.8003 35 31.2003 35 32.27 34.455C33.2108 33.9757 33.9757 33.2108 34.455 32.27C35 31.2003 35 29.8003 35 27V13C35 10.1997 35 8.7996 34.455 7.73005C33.9757 6.78923 33.2108 6.02433 32.27 5.54497C31.2003 5 29.8003 5 27 5H13C10.1997 5 8.7996 5 7.73005 5.54497C6.78923 6.02433 6.02433 6.78923 5.54497 7.73005C5 8.7996 5 10.1997 5 13V27C5 29.8003 5 31.2003 5.54497 32.27C6.02433 33.2108 6.78923 33.9757 7.73005 34.455C8.7996 35 10.1997 35 13 35Z" 
+                        stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    종료
+                </button>
+            </div>
         </div>
+
         <div class="footer">
-                <p><a href="terms_of_service_and_privacy_policy.html">약관 | 개인정보 처리 방침</a></p>
+            <p><a href="terms_of_service_and_privacy_policy.html">약관 | 개인정보 처리 방침</a></p>
         </div>
     </div>
 
-    <!-- <script>
-        // JavaScript 코드로 실제 통화한 번호를 설정
-        window.onload = function() {
-            // 예시로 통화한 번호를 설정 (이 부분은 실제 데이터로 변경 가능)
-            var phoneNumber = '+82 10-5678-9876';  // 예시 통화 번호
-            document.getElementById('callNumber').textContent = phoneNumber;
-        };
-    </script> -->
+    <!-- 통화 요약 / 번호 불러오는 스크립트 -->
+    <script>
+        (function () {
+            const callNumberEl = document.getElementById("callNumberText");
+            const summaryEl = document.getElementById("callSummaryText");
+
+            const storedNumber = localStorage.getItem("lastCallNumber");
+            const storedSummary = localStorage.getItem("lastCallSummary");
+
+            if (storedNumber && callNumberEl) {
+                callNumberEl.textContent = storedNumber;
+            }
+
+            if (storedSummary && summaryEl) {
+                summaryEl.textContent = storedSummary;
+            } else if (summaryEl) {
+                summaryEl.textContent = "통화 요약을 불러오는 중입니다...";
+            }
+
+            // 버튼 기능
+            const callAgainBtn = document.querySelector(".call-again");
+            const finishBtn = document.querySelector(".finish");
+
+            if (callAgainBtn) {
+                callAgainBtn.addEventListener("click", function () {
+                    window.location.href = "call.html";
+                });
+            }
+
+            if (finishBtn) {
+                finishBtn.addEventListener("click", function () {
+                    window.location.href = "call.html";
+                });
+            }
+        })();
+    </script>
+
 </body>
 </html>
